--- a/gas/Makefile.am
+++ b/gas/Makefile.am
@@ -133,6 +133,7 @@ TARGET_CPU_CFILES = \
 	config/tc-alpha.c \
 	config/tc-arc.c \
 	config/tc-arm.c \
+	config/tc-asmjs.c \
 	config/tc-avr.c \
 	config/tc-bfin.c \
 	config/tc-cr16.c \
@@ -207,6 +208,7 @@ TARGET_CPU_HFILES = \
 	config/tc-alpha.h \
 	config/tc-arc.h \
 	config/tc-arm.h \
+	config/tc-asmjs.h \
 	config/tc-avr.h \
 	config/tc-bfin.h \
 	config/tc-cr16.h \
