--- a/bfd/configure.ac
+++ b/bfd/configure.ac
@@ -699,6 +699,7 @@ do
     visium_elf32_vec)		 tb="$tb elf32-visium.lo elf32.lo $elf" ;;
     w65_coff_vec)		 tb="$tb coff-w65.lo reloc16.lo $coffgen" ;;
     wasm_elf32_vec)              tb="$tb elf32-wasm.lo elf32.lo $elf" ;;
+    wasm64_elf64_vec)            tb="$tb elf64-wasm64.lo elf64.lo $elf" ;;
     we32k_coff_vec)		 tb="$tb coff-we32k.lo $coffgen" ;;
     x86_64_coff_vec)		 tb="$tb coff-x86_64.lo $coff"; target_size=64 ;;
     x86_64_elf32_vec)		 tb="$tb elf64-x86-64.lo elf-ifunc.lo elf-nacl.lo elf64.lo elf32.lo $elf"; target_size=64 ;;
