--- a/ld/Makefile.in
+++ b/ld/Makefile.in
@@ -800,6 +800,7 @@ ALL_EMULATION_SOURCES = \
 	evsta.c \
 	ew65.c \
 	ewasm.c \
+	ewasm64.c \
 	exgateelf.c \
 	ez80.c \
 	ez8001.c \
@@ -1503,6 +1504,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/evsta.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ew65.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ewasm.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ewasm64.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/exgateelf.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ez80.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ez8001.Po@am__quote@
@@ -3460,6 +3462,11 @@ ew65.c: $(srcdir)/emulparams/w65.sh \
 ewasm.c: $(srcdir)/emulparams/wasm.sh \
   $(srcdir)/emulparams/wasm.sh $(ELF_DEPS) \
   $(srcdir)/emultempl/wasm.em $(srcdir)/scripttempl/wasm.sc \
+  ${GEN_DEPENDS}
+
+ewasm64.c: $(srcdir)/emulparams/wasm64.sh \
+  $(srcdir)/emulparams/wasm64.sh $(ELF_DEPS) \
+  $(srcdir)/emultempl/wasm64.em $(srcdir)/scripttempl/wasm64.sc \
   ${GEN_DEPENDS}
 
 exgateelf.c: $(srcdir)/emulparams/xgateelf.sh \
