--- a/gdb/features/Makefile
+++ b/gdb/features/Makefile
@@ -75,7 +75,7 @@ WHICH = aarch64 \
 	s390-tevx-linux64 s390x-tevx-linux64 \
 	tic6x-c64xp tic6x-c64x tic6x-c62x \
 	tic6x-c64xp-linux tic6x-c64x-linux tic6x-c62x-linux \
-	wasm
+	wasm wasm64
 
 # Record which registers should be sent to GDB by default after stop.
 aarch64-expedite = x29,sp,pc
@@ -140,6 +140,7 @@ tic6x-c64xp-linux-expedite = A15,PC
 tic6x-c64x-linux-expedite = A15,PC
 tic6x-c62x-linux-expedite = A15,PC
 wasm-expedite = sp,pc
+wasm64-expedite = sp,pc
 
 
 XSLTPROC = xsltproc
@@ -247,7 +248,8 @@ XMLTOC = \
 	tic6x-c64x.xml \
 	tic6x-c64xp-linux.xml \
 	tic6x-c64xp.xml \
-	wasm.xml
+	wasm.xml \
+	wasm64.xml
 
 
 CFILES = $(patsubst %.xml,%.c,$(XMLTOC))
