--- a/opcodes/configure.ac
+++ b/opcodes/configure.ac
@@ -348,6 +348,7 @@ if test x${all_targets} = xfalse ; then
 	bfd_visium_arch)	ta="$ta visium-dis.lo visium-opc.lo" ;;
 	bfd_w65_arch)		ta="$ta w65-dis.lo" ;;
         bfd_wasm_arch)          ta="$ta wasm-dis.lo" ;;
+        bfd_wasm64_arch)        ta="$ta wasm64-dis.lo" ;;
 	bfd_we32k_arch)		;;
 	bfd_xc16x_arch)		ta="$ta xc16x-asm.lo xc16x-desc.lo xc16x-dis.lo xc16x-ibld.lo xc16x-opc.lo" using_cgen=yes ;;
 	bfd_xgate_arch)		ta="$ta xgate-dis.lo xgate-opc.lo" ;;
