--- a/ld/Makefile.am
+++ b/ld/Makefile.am
@@ -437,6 +437,7 @@ ALL_EMULATION_SOURCES = \
 	evsta.c \
 	ew65.c \
 	ewasm.c \
+	ewasm32.c \
 	ewasm64.c \
 	exgateelf.c \
 	ez80.c \
@@ -2076,6 +2077,11 @@ eshlelf64_nbsd.c: $(srcdir)/emulparams/shlelf64_nbsd.sh \
 ewasm.c: $(srcdir)/emulparams/wasm.sh \
   $(srcdir)/emulparams/wasm.sh $(ELF_DEPS) \
   $(srcdir)/emultempl/wasm.em $(srcdir)/scripttempl/wasm.sc \
+  ${GEN_DEPENDS}
+
+ewasm32.c: $(srcdir)/emulparams/wasm32.sh \
+  $(srcdir)/emulparams/wasm32.sh $(ELF_DEPS) \
+  $(srcdir)/emultempl/wasm32.em $(srcdir)/scripttempl/wasm32.sc \
   ${GEN_DEPENDS}
 
 ewasm64.c: $(srcdir)/emulparams/wasm64.sh \
