--- a/opcodes/Makefile.am
+++ b/opcodes/Makefile.am
@@ -257,6 +257,7 @@ TARGET_LIBOPCODES_CFILES = \
 	visium-opc.c \
 	w65-dis.c \
 	wasm-dis.c \
+	wasm32-dis.c \
 	wasm64-dis.c \
 	xc16x-asm.c \
 	xc16x-desc.c \
