--- a/gas/Makefile.am
+++ b/gas/Makefile.am
@@ -197,6 +197,7 @@ TARGET_CPU_CFILES = \
 	config/tc-vax.c \
 	config/tc-visium.c \
 	config/tc-wasm.c \
+	config/tc-wasm32.c \
 	config/tc-wasm64.c \
 	config/tc-xstormy16.c \
 	config/tc-xc16x.c \
@@ -274,6 +275,7 @@ TARGET_CPU_HFILES = \
 	config/tc-vax.h \
 	config/tc-visium.h \
 	config/tc-wasm.h \
+	config/tc-wasm32.h \
 	config/tc-wasm64.h \
 	config/tc-xstormy16.h \
 	config/tc-xc16x.h \
