--- a/gas/Makefile.in
+++ b/gas/Makefile.in
@@ -428,6 +428,7 @@ TARGET_CPU_CFILES = \
 	config/tc-alpha.c \
 	config/tc-arc.c \
 	config/tc-arm.c \
+	config/tc-asmjs.c \
 	config/tc-avr.c \
 	config/tc-bfin.c \
 	config/tc-cr16.c \
@@ -503,6 +504,7 @@ TARGET_CPU_HFILES = \
 	config/tc-alpha.h \
 	config/tc-arc.h \
 	config/tc-arm.h \
+	config/tc-asmjs.h \
 	config/tc-avr.h \
 	config/tc-bfin.h \
 	config/tc-cr16.h \
